Content Type and Engagement Genral statics

--- a/html/home.html
+++ b/html/home.html
@@ -43,7 +43,7 @@
             <div class="sec-top-head">
                 <!-- LOGO -->
                 <div class="logo">
-                    <h1>EIKYOU</h1>
+                    <h1><a href="#"><img src="../img/eikyou.png" alt=""><span>EIKYOU</span></a></h1>
                 </div>
                 <!-- END LOGO -->
 
@@ -111,19 +111,19 @@
                                     <div class="col-md-4 col-1">
                                         <div class="md-big-num">
                                             <h3>17.5 M</h3>
-                                            <p><i class="ico ico-follow"></i>Followers</p>
+                                            <p><i class="fas fas-follow"></i>Followers</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-2">
                                         <div class="md-big-num">
                                             <h3>3,037</h3>
-                                            <p><i class="ico ico-post"></i>Posts</p>
+                                            <p><i class="fas fas-post"></i>Posts</p>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-3">
                                         <div class="md-big-num">
                                             <h3>2.3 M</h3>
-                                            <p><i class="ico ico-likes"></i>Likes</p>
+                                            <p><i class="fas fas-likes"></i>Likes</p>
                                         </div>
                                     </div>
                                 </div>
@@ -132,11 +132,17 @@
                                         <div class="sec-container-group">
                                             <div class="sec-group sec-avg-group">
                                                 <div class="top">
-                                                    <p class="title">AVG. ENGAGEMENT PER POST<I class="ico ico-question"></I></p>
-                                                    <p class="l-font">0.92%</p>
-                                                    <div class="min-max">
-                                                        <p><span>1.10% Max <i class="ico ico-arrow-up"></i></span><span>0.10% Min <i class="ico ico-arrow-dw"></i></span></p>
+                                                    <div class="f-left">
+                                                        <p class="title">AVG. ENGAGEMENT PER POST<I class="fas fa-question-circle"></I></p>
                                                     </div>
+
+                                                    <div class="f-right">
+                                                        <p class="l-font">0.92%</p>
+                                                        <div class="min-max">
+                                                            <p><span>1.10% Max <i class="fas fas-arrow-up"></i></span><span>0.10% Min <i class="fas fas-arrow-dw"></i></span></p>
+                                                        </div>
+                                                    </div>
+
                                                 </div>
                                                 <div class="btm">
                                                     <!-- MD BLOCK DATA -->
@@ -173,7 +179,7 @@
                                                         <h3 class="title">USER GENERATED CONTENT</h3>
                                                         <div class="col-1 full-col">
                                                             <p class="xl-font">4</p>
-                                                            <p>Brand influencers <i class="ico ico-question"></i></p>
+                                                            <p>Brand influencers <i class="fas fa-question-circle"></i></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -181,25 +187,25 @@
                                                     <!-- MD BLOCK DATA -->
                                                     <div class="md-block-data">
                                                         <div class="col-1 full-col">
-                                                            <p class="m-font">+0.15%</p>
-                                                            <p>Avg. increse in engagement from UGC <i class="ico ico-question"></i></p>
+                                                            <p class="xs-font">+0.15%</p>
+                                                            <p>Avg. increse in engagement from UGC <i class="fas fa-question-circle"></i></p>
                                                         </div>
                                                     </div>
-
-                                                    <div class="more-info">
-                                                        <i class="ico ico-more"> More info</i>
-                                                    </div>
-
+                                                </div>
+                                                <div class="fot">
+                                                  <div class="more-info">
+                                                      <a href="#"><i class="fas fa-plus-circle"></i> More info</a>
+                                                  </div>
                                                 </div>
                                             </div>
                                             <div class="sec-group sec-most-post">
                                                 <div class="top">
                                                     <!-- MD BLOCK DATA -->
                                                     <div class="md-block-data">
-                                                        <h3 class="title">USER GENERATED CONTENT</h3>
+                                                        <h3 class="title">MOST POSTS</h3>
                                                         <div class="col-1 full-col">
-                                                            <p>4</p>
-                                                            <p>Brand influencers <i class="ico ico-question"></i></p>
+                                                            <p>Late evening on Tuesday</p>
+                                                            <p>5 am to 8 am</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -208,15 +214,16 @@
                                                     <div class="md-block-data">
                                                         <h3 class="title">BEST TIME TO POST</h3>
                                                         <div class="col-1 full-col">
-                                                            <P>Early afternoon on Wednesday</P>
+                                                            <P><b>Early afternoon</b> on <b>Wednesday</b></P>
                                                             <p>5 am to 8 am</p>
                                                         </div>
                                                     </div>
+                                                </div>
 
-                                                    <div class="more-info">
-                                                        <i class="ico ico-more"> More info</i>
-                                                    </div>
-
+                                                <div class="fot">
+                                                  <div class="more-info">
+                                                      <a href="#"><i class="fas fa-plus-circle"></i> More info</a>
+                                                  </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -235,7 +242,50 @@
                             <div class="bd">
                                 <div class="row">
                                     <div class="col-md-7">
-                                        TABLA DATOS
+                                        <table>
+                                            <tr class="line theader">
+                                                <th width="16px"></th>
+                                                <th><span>Category</span></th>
+                                                <th><span>% of content <i class="fas fa-question-circle"></i></span></th>
+                                                <th><span>Engagement <i class="fas fa-question-circle"></i></span></th>
+                                                <th><span>% of Likes</span></th>
+                                            </tr>
+                                            <tr class="line">
+                                                <td><span class="color video"></span></td>
+                                                <td><span class="name">VIDEO</span></td>
+                                                <td><span>15%</span></td>
+                                                <td><span>0.78%</span></td>
+                                                <td><span class="last">3%</span></td>
+                                            </tr>
+                                            <tr class="line">
+                                                <td><span class="color portrait"></span></td>
+                                                <td><span class="name">PORTRAIT</span></td>
+                                                <td><span>22%</span></td>
+                                                <td><span>0.83%</span></td>
+                                                <td><span class="last">19%</span></td>
+                                            </tr>
+                                            <tr class="line">
+                                                <td><span class="color product"></span></td>
+                                                <td><span class="name">PRODUCT</span></td>
+                                                <td><span>5%</span></td>
+                                                <td><span>0.70%</span></td>
+                                                <td><span class="last">59%</span></td>
+                                            </tr>
+                                            <tr class="line">
+                                                <td><span class="color extra"></span></td>
+                                                <td><span class="name">EXTRA</span></td>
+                                                <td><span>8%</span></td>
+                                                <td><span>0.00%</span></td>
+                                                <td><span class="last">1%</span></td>
+                                            </tr>
+                                            <tr>
+                                                <td><span class="color closeup"></span></td>
+                                                <td><span class="name">CLOSEUP</span></td>
+                                                <td><span>12%</span></td>
+                                                <td><span>0.49%</span></td>
+                                                <td><span class="last">19%</span></td>
+                                            </tr>
+                                        </table>
                                     </div>
                                     <div class="col-md-5">
                                         GRAFICA
@@ -243,7 +293,38 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        FOOTER
+                                        <div class="c-and-e-ft-data">
+                                            <h3>USER GENERATED CONTENT <i class="fas fa-question-circle"></i></h3>
+                                            <div class="bd">
+                                              <div class="row">
+                                                <div class="col-md-4">
+                                                    <div class="col-1">
+                                                      <span>26%</span>
+                                                      <div class="right-col">
+                                                          <span>of all content</span>
+                                                          <span class="progressbar"><span class="bar" style="width:30%;"></span></span>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="col-2">
+                                                      <span>+0.15%</span>
+                                                      <div>
+                                                          <span>Avg. increase in engagement from UGC <i class="fas fa-question-circle"></i></span>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4">
+                                                    <div class="col-3">
+                                                      <span>15%</span>
+                                                      <div>
+                                                          <span>f total likes</span>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                              </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -446,6 +527,92 @@
                                         <li><a href="#">Best Post</a></li>
                                     </ul>
                                 </div>
+
+
+                                <div class="md-tab-cont-endg">
+                                    <div class="item first">
+                                        <div class="head">
+                                        </div>
+                                        <div class="body">
+                                            <table>
+                                                <tr>
+                                                    <td><span class="color video"></span> VIDEO</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><span class="color"></span>PORTRAIT</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><span class="color"></span>PRODUCT</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><span class="color"></span>EXTRA</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><span class="color"></span>CLOSEUP</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                        <div class="footer">
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="head">
+                                            <h3>Maybelline New Yory</h3>
+                                            <span>L´Oréal group</span>
+                                            <div>
+                                                GRAFICA
+                                            </div>
+                                        </div>
+                                        <div class="body">
+                                            <table>
+                                                <tr>
+                                                    <td><span>Content</span></td>
+                                                    <td><span>Engagement <i class="fas fa-question-circle"></i></span></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>15%</td>
+                                                    <td>0.78%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>15%</td>
+                                                    <td>0.78%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>15%</td>
+                                                    <td>0.78%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>15%</td>
+                                                    <td>0.78%</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>15%</td>
+                                                    <td>0.78%</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                        <div class="footer">
+
+                                        </div>
+                                    </div>
+                                    <div class="item">
+
+                                    </div>
+                                    <div class="item">
+
+                                    </div>
+                                    <div class="item">
+
+                                    </div>
+
+
+                                </div>
+
+
+
+
+
                             </div>
                             <div class="ft">
                             </div>
@@ -476,7 +643,7 @@
 
             </div>
 
-            <a href="#top" class="btn-back-to-top">Back to top</a>
+            <a href="#top" class="btn-back-to-top"><i class="fas fa-chevron-circle-up"></i>Back to top</a>
 
         </div>
 
