--- a/html/ugc.html
+++ b/html/ugc.html
@@ -132,48 +132,12 @@
                                     <div class="col-md-12">
                                         <div class="sec-container-group">
                                             <div class="sec-group sec-avg-group">
+
                                                 <div class="top">
-
-                                                    <div class="f-left">
-                                                        <p class="title">AVG. ENGAGEMENT PER POST<I class="fas fa-question-circle"></I></p>
-                                                    </div>
-
-                                                    <div class="f-right">
-                                                        <p class="l-font">0.92%</p>
-                                                        <div class="min-max">
-                                                            <p><span>1.10% Max <i class="fas fas-arrow-up"></i></span><span>0.10% Min <i class="fas fas-arrow-dw"></i></span></p>
-                                                        </div>
-                                                    </div>
-
+                                                    arriba
                                                 </div>
                                                 <div class="btm">
-
-                                                    <!-- MD BLOCK DATA -->
-                                                    <div class="md-block-data">
-                                                        <h3 class="title">AVG. LIKES</h3>
-                                                        <div class="col-1">
-                                                            <p class="xm-font">4.53</p>
-                                                            <p>Per video</p>
-                                                        </div>
-                                                        <div class="col-2">
-                                                            <p class="xm-font">7.38</p>
-                                                            <p>Per post</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <!-- MD BLOCK DATA -->
-                                                    <div class="md-block-data">
-                                                        <h3 class="title">AVG. COMMENTS</h3>
-                                                        <div class="col-1">
-                                                            <p class="xm-font">4.53</p>
-                                                            <p>Per video</p>
-                                                        </div>
-                                                        <div class="col-2">
-                                                            <p class="xm-font">7.38</p>
-                                                            <p>Per post</p>
-                                                        </div>
-                                                    </div>
-
+                                                    abajo
                                                 </div>
                                             </div>
                                             <div class="sec-group sec-user-group">
@@ -208,7 +172,7 @@
                                             </div>
                                             <div class="sec-group sec-most-post">
                                                 <div class="top">
-
+                                                    titulo
                                                     <!-- MD BLOCK DATA -->
                                                     <div class="md-block-data">
                                                         <h3 class="title">MOST POSTS</h3>
@@ -220,7 +184,7 @@
 
                                                 </div>
                                                 <div class="btm">
-
+                                                    2 filas
                                                     <!-- MD BLOCK DATA -->
                                                     <div class="md-block-data">
                                                         <h3 class="title">BEST TIME TO POST</h3>
