filter sidebar y bar

--- a/html/home.html
+++ b/html/home.html
@@ -152,11 +152,11 @@
                                                         <h3 class="title">AVG. LIKES</h3>
                                                         <div class="col-1">
                                                             <p class="xm-font">4.53</p>
-                                                            <p>Per video</p>
+                                                            <p class="xxs-font">Per video</p>
                                                         </div>
                                                         <div class="col-2">
                                                             <p class="xm-font">7.38</p>
-                                                            <p>Per post</p>
+                                                            <p class="xxs-font">Per post</p>
                                                         </div>
                                                     </div>
 
@@ -165,11 +165,11 @@
                                                         <h3 class="title">AVG. COMMENTS</h3>
                                                         <div class="col-1">
                                                             <p class="xm-font">4.53</p>
-                                                            <p>Per video</p>
+                                                            <p class="xxs-font">Per video</p>
                                                         </div>
                                                         <div class="col-2">
                                                             <p class="xm-font">7.38</p>
-                                                            <p>Per post</p>
+                                                            <p class="xxs-font">Per post</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -189,8 +189,8 @@
                                                     <!-- MD BLOCK DATA -->
                                                     <div class="md-block-data">
                                                         <div class="col-1 full-col">
-                                                            <p class="xs-font">+0.15%</p>
-                                                            <p>Avg. increse in engagement from UGC <i class="fas fa-question-circle"></i></p>
+                                                            <p class="xs-font bold">+0.15%</p>
+                                                            <p class="xxs-font">Avg. increse in engagement from UGC <i class="fas fa-question-circle"></i></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -762,7 +762,7 @@
                                 </div>
 
                                 <!-- CONTENT AND ENGAGEMENT -->
-                                <div style="display:none;" class="md-mu md-tab-cont-endg">
+                                <div class="md-mu md-tab-cont-endg">
                                     <div class="item first">
                                         <div class="head">
 
