Cambio de estilos de fuentes en la sección general.

--- a/html/home.html
+++ b/html/home.html
@@ -140,9 +140,10 @@
 
                                                     <div class="f-right">
                                                         <p class="l-font">0.92%</p>
-                                                        <div class="min-max">
-                                                            <p><span>1.10% Max <i class="fas fas-arrow-up"></i></span><span>0.10% Min <i class="fas fas-arrow-dw"></i></span></p>
-                                                        </div>
+                                                        
+                                                    </div>
+                                                    <div class="min-max">
+                                                        <p><span>1.10% Max <i class="fas fas-arrow-up"></i></span><span>0.10% Min <i class="fas fas-arrow-dw"></i></span></p>
                                                     </div>
 
                                                 </div>
@@ -181,7 +182,7 @@
                                                         <h3 class="title">USER GENERATED CONTENT</h3>
                                                         <div class="col-1 full-col">
                                                             <p class="xl-font">4</p>
-                                                            <p>Brand influencers <i class="fas fa-question-circle"></i></p>
+                                                            <p class= "sm-description">Brand influencers <i class="fas fa-question-circle"></i></p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -206,8 +207,8 @@
                                                     <div class="md-block-data">
                                                         <h3 class="title">MOST POSTS</h3>
                                                         <div class="col-1 full-col">
-                                                            <p>Late evening on Tuesday</p>
-                                                            <p>5 am to 8 am</p>
+                                                            <p> <span class= "time-day">Late evening</span> on <span class = "time-day">Tuesday</span></p>
+                                                            <p class= "sm-time">5 am to 8 am</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -216,8 +217,8 @@
                                                     <div class="md-block-data">
                                                         <h3 class="title">BEST TIME TO POST</h3>
                                                         <div class="col-1 full-col">
-                                                            <P><b>Early afternoon</b> on <b>Wednesday</b></P>
-                                                            <p>5 am to 8 am</p>
+                                                            <p><span class= "time-day">Early afternoon</span> on <span class= "time-day">Wednesday</span></p>
+                                                            <p class= "sm-time">5 am to 8 am</p>
                                                         </div>
                                                     </div>
                                                 </div>
